<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/top" />

     <EditText
         android:id="@+id/et_mobile"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_phone"
         android:maxLength="11"/>
     <EditText
         android:id="@+id/et_password"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password"
         android:password="true"/>
     <EditText
         android:id="@+id/et_password_again"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_password_again"
         android:password="true"/>
     <EditText
         android:id="@+id/et_nickname"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/hint_nickname"/>

      <Button
             android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/btn_register"
             android:textSize="20sp" />
                
</LinearLayout>